--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
             <version>${struts2.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-json-plugin</artifactId>
+            <version>${struts2.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
